@@ -1,1 +1,4 @@
 # SC6DungeonCrawler
+
+Runtime:
+--module-path "./lib" --add-modules javafx.controls,javafx.fxml
